--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=9000
 GEMINI_API_KEY="AIzaSyA8oqqKikjhw_G6laQ6wCYJV70Bvbt21bg"
+MONGO_URI=mongodb+srv://mangleshyadav2:25May%402014@cluster0.fvelcgt.mongodb.net/gemini?retryWrites=true&w=majority&appName=Cluster0
