--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.61",
+    "@langchain/google-genai": "^0.2.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.0",
     "nodemon": "^3.1.10"
   }
 }
