--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=9000
 GEMINI_API_KEY="AIzaSyA8oqqKikjhw_G6laQ6wCYJV70Bvbt21bg"
 MONGO_URI=mongodb+srv://mangleshyadav2:25May%402014@cluster0.fvelcgt.mongodb.net/gemini?retryWrites=true&w=majority&appName=Cluster0
+REDIS_URL=redis://localhost:6379
